# javagalileo

./: .gitignore  .gitmodules  .travis.yml  README.md  iot-config.json
JNIGalileoWrapper/: JNIGalileoWrapper.sln
JNIGalileoWrapper/JNIGalileoWrapper/: CMakeLists.txt  JNIGalileoWrapper.cpp  JNIGalileoWrapper.h  JNIGalileoWrapper.vcxproj  JNIGalileoWrapper.vcxproj.filters
javagalileo/: pom.xml
javagalileo/include/: javagalileo_GalileoSDK.h  javagalileo_Sample1.h
javagalileo/src/main/java/javagalileo/: GalileoSDK.java
javagalileo/src/main/java/javagalileo/listeners/: OnConnectEventListener.java  OnDisconnectEventListener.java  OnGoalReachedEventListener.java  OnStatusUpdateEventListener.java
javagalileo/src/main/java/javagalileo/models/: GalileoStatus.java  ServerInfo.java
javagalileo/src/main/java/javagalileo/utils/: NativeUtils.java
javagalileo/src/test/java/javagalileo/: AppTest.java
javagalileoTest/src/: Main.java
scripts/: build.ps1  build.sh  package.ps1  package.sh
